<resources>
    <string name="app_name">MusicApp</string>
    <string name="settings_text">"Настройки"</string>
    <string name="home_text">"Главная"</string>
    <string name="collection_text">"Коллекция"</string>
    <string name="login_text">"Вход"</string>
    <string name="registration_text">"Регистрация"</string>
    <string name="email_text">"Логин"</string>
    <string name="password_string">"Пароль"</string>
    <string name="check_password_string">"Подтверждение пароля"</string>
    <string name="dark_mode_text">"Темная тема"</string>
    <string name="storage_text">"Хранилище"</string>
    <string name="delete_account_text">"Удалить аккаунт"</string>
    <string name="blacklist_text">"Черный список"</string>
    <string name="change_preferences_text">"Изменить предпочтения"</string>
    <string name="next_text">"Далее"</string>
    <string name="exit_text">"Выйти"</string>
    <string name="cancel_text">"Отмена"</string>
    <string name="all_text">"Все"</string>
    <string name="like_text">"Нравится"</string>
    <string name="add_in_playlist_text">"Добавить в плейлист"</string>
    <string name="share_text">"Поделиться"</string>
    <string name="play_next_text">"Играть следующим"</string>
    <string name="add_in_queue_text">"Добавить в очередь"</string>
    <string name="move_to_group_text">"Перейти к артисту"</string>
    <string name="move_to_album_text">"Перейти к альбому"</string>
    <string name="delete_from_device_text">"Удалить с устройства"</string>
    <string name="download_text">"Скачать"</string>
    <string name="about_music_text">"О треке"</string>
    <string name="me_favorite_text">"Мне нравится"</string>
    <string name="all_collection_text">"Вся коллекция"</string>
    <string name="all_playlist_text">"Плейлисты"</string>
    <string name="all_album_text">"Альбомы"</string>
    <string name="all_download_text">"Скачанное"</string>
    <string name="favorite_artist_text">"Любимые исполнители"</string>
    <string name="title_dialog_exit_text">"Выход"</string>
    <string name="message_dialog_exit_text">"Вы уверены, что хотите выйти?"</string>
    <string name="title_settings_text">"Настройки"</string>
    <string name="title_settings_preferences_text">"Предпочтения"</string>
    <string name="message_dialog_delete_playlist_text">"Вы действительно хотите удалить плейлист?"</string>
    <string name="new_playlist_text">"Новый плейлист"</string>
    <string name="all_playlists_text">"Плейлисты"</string>
    <string name="sort_text">"Сортировка"</string>
    <string name="by_default_text">"По умолчанию"</string>
    <string name="by_alphabet_text">"По алфавиту"</string>
    <string name="by_date_create_text">"По дате создания"</string>
    <string name="save_text">"Сохранить"</string>
    <string name="create_text">"Создать"</string>
    <string name="new_playlist_message_text">"Введите название плейлиста"</string>
    <string name="search_text">"Поиск"</string>
    <string name="delete_playlist_text">"Удалить плейлист"</string>
    <string name="delete_text">"Удалить"</string>
    <string name="input_name_text">"Введите имя"</string>
    <string name="title_dialog_edit_name_text">"Изменить название"</string>
    <string name="edit_image_text">"Изменить обложку"</string>
    <string name="edit_name_text">"Переименовать"</string>
    <string name="add_music_text">"Добавить трек"</string>
    <string name="progress_text">"Загрузка"</string>
    <string name="listen_text">"Слушать"</string>
    <string name="favorite_text">"Нравится"</string>
    <string name="search_hint_text">"Трек, альбом, исполнитель"</string>
    <string name="executer_text">"Исполнитель"</string>
    <string name="label_text">"Лейбл"</string>
    <string name="author_music_text">"Автор музыки"</string>
    <string name="production_text">"Продюсер"</string>

    <string name="error_duplicate_text">"Название не поменялось"</string>
    <string name="error_empty_line_text">"Пустая строка"</string>
    <string name="error_email_text">"Почта введена неккоректно"</string>
    <string name="error_password_text">"Должно быть больше 6 символов"</string>
    <string name="error_check_password_text">"Пароли не совпадают"</string>
    <string name="error_login_text">"Неверны логин или пароль"</string>
    <string name="error_registration_text">"Такой пользователь уже существует"</string>
    <string name="show_text">Показать текст</string>

    <string-array name="search_filter_array">
        <item>"Все"</item>
        <item>"Трек"</item>
        <item>"Исполнитель"</item>
        <item>"Альбом"</item>
    </string-array>

    <string name="channel_name_download_text">AudioDownload</string>
    <string name="channel_description_download_text">AudioDownloadDescription</string>
    <string name="add_in_black_list_text">Добавить в черный список</string>
    <string name="report_problem_text">Сообщить о проблеме</string>
    <string name="vk_text">ВКонтакте</string>
    <string name="google_text">Google</string>
    <string name="entry_with_help">Войти с помощью</string>
    <string name="yandex_text">Yandex</string>

    <string name="url_favorite_playlist">https://i.pinimg.com/736x/3f/53/e0/3f53e0e8e2da84c69f814e0d8f629e8f.jpg</string>

    <string name="login_failed_text">"Вход не выполнен"</string>
    <string name="error_get_user_yandex_text">Error on the Yandex side</string>
    <string name="error_get_user_vk_text">Error on the Vk side</string>
    <string name="download_music_text">Скачанные треки</string>
    <string name="download_album_text">Скачанные альбомы</string>
    <string name="title_downloaded_text">Скачанное</string>
    <string name="error_api_text">Ошибка на стороне сервера</string>
    <string name="error_auth_yet_text">Авторизируйтесь заново</string>
    <string name="error_need_auth_text">Нужно авторизироваться</string>
    <string name="send_text">Отправить</string>
    <string name="description_error_text">Описание ошибки</string>
    <string name="account_text">Аккаунт</string>
    <string name="about_app_text">О приложении</string>
    <string name="filter_text">Фильтр</string>
    <string name="all_music_text">"Треки"</string>
    <string name="popular_music_text">Популярные треки</string>
    <string name="popular_album_text">Популярные альбомы</string>
    <string name="official_page_text">Официальные страницы</string>
    <string name="x_text">X</string>
    <string name="website_text">Официальный сайт</string>
    <string name="youtube_text">YouTube</string>
    <string name="by_date_text">По дате</string>
    <string name="by_rating_text">По рейтингу</string>
    <string name="by_album_text">По альбомам</string>
    <string name="search_by_track_text">Поиск по трекам</string>
    <string name="delete_image_text">Удалить фото</string>
    <string name="change_image_text">Изменить фото</string>
    <string name="disable_network_text">Остутсвует интернет</string>
    <string name="wifi_off_text">Нет интернета</string>
    <string name="selected_groups_text">"Выбрано исполнителей: "</string>
    <string name="added_text">Добавленное</string>
    <string name="title_text">Название</string>
    <string name="dislike_text">Не нравится</string>
    <string name="previous_music_text">Предыдущий трек</string>
    <string name="on_or_off_text">Включить или выключить</string>
    <string name="next_music_text">Следующая песня</string>
    <string name="put_track_on_repeat">Поставить трек на повтор</string>
    <string name="lyrics_text">Текст песни</string>
    <string name="shuffle_playlist_text">Перемешать плейлист</string>
    <string name="context_menu_text">Контекстное меню</string>
    <string name="hide_player_text">Свернуть плеер</string>
    <string name="with_video_clip_text">Есть видеоклип</string>
    <string name="explicit_text">Возрастное ограничение 16/18+</string>
</resources>