<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools">

    <com.google.android.material.bottomsheet.BottomSheetDragHandleView
        android:id="@+id/bottom_sheet_drag_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/music_view"
        style="@style/TextColorOnSurface"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/accid"
        android:textSize="32sp"
        android:gravity="center"
        android:layout_marginStart="15dp"
        android:layout_marginEnd="15dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/bottom_sheet_drag_view"
        tools:text="Music Name" />

    <LinearLayout
        android:id="@+id/execute_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingStart="15dp"
        android:paddingEnd="15dp"
        android:layout_marginTop="20dp"
        app:layout_constraintTop_toBottomOf="@+id/music_view">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/roboto_medium"
            android:text="@string/executer_text"
            android:textSize="14sp" />

        <TextView
            android:id="@+id/execute_view"
            style="@style/TextColorOnSurface"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/roboto_medium"
            android:textSize="16sp"
            android:layout_marginTop="5dp"
            tools:text="Execute name1" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/author_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingStart="15dp"
        android:paddingEnd="15dp"
        android:layout_marginTop="15dp"
        app:layout_constraintTop_toBottomOf="@+id/execute_layout">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/roboto_medium"
            android:text="@string/label_text"
            android:textSize="14sp" />

        <TextView
            android:id="@+id/label_view"
            style="@style/TextColorOnSurface"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:fontFamily="@font/roboto_medium"
            android:textSize="16sp"
            tools:text="Execute name2" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/production_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingStart="15dp"
        android:paddingEnd="15dp"
        android:layout_marginTop="15dp"
        app:layout_constraintTop_toBottomOf="@+id/author_layout">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/roboto_medium"
            android:text="@string/author_music_text"
            android:textSize="14sp" />

        <TextView
            android:id="@+id/author_view"
            style="@style/TextColorOnSurface"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:fontFamily="@font/roboto_medium"
            android:textSize="16sp"
            tools:text="Execute name3" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/label_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingStart="15dp"
        android:paddingEnd="15dp"
        android:layout_marginTop="15dp"
        app:layout_constraintTop_toBottomOf="@+id/production_layout">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/roboto_medium"
            android:text="@string/production_text"
            android:textSize="14sp" />

        <TextView
            android:id="@+id/production_view"
            style="@style/TextColorOnSurface"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:fontFamily="@font/roboto_medium"
            android:textSize="16sp"
            tools:text="Execute name4"
            android:layout_marginBottom="20dp"/>
    </LinearLayout>

    <com.google.android.material.progressindicator.CircularProgressIndicator
        android:id="@+id/progress_indicator"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone"
        android:indeterminate="true"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>
</androidx.constraintlayout.widget.ConstraintLayout>