<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.appbar.AppBarLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/appBarLayout"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <com.google.android.material.appbar.CollapsingToolbarLayout
        android:id="@+id/collapsing_toolbar"
        android:layout_width="match_parent"
        android:layout_height="400dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_scrollFlags="scroll|exitUntilCollapsed"
        app:titleTextEllipsize="end"
        app:expandedTitleMarginTop="1000dp">

        <com.google.android.material.imageview.ShapeableImageView
            android:id="@+id/back_image"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:scaleType="centerCrop"
            app:layout_collapseMode="parallax"
            app:layout_constraintTop_toTopOf="parent" />

        <com.google.android.material.imageview.ShapeableImageView
            android:id="@+id/front_image"
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:layout_marginTop="90dp"
            android:scaleType="centerCrop"
            app:shapeAppearance="@style/ImageCornerRadius8dp"
            app:layout_collapseMode="pin"
            android:layout_gravity="center_horizontal"
            app:layout_constraintBottom_toTopOf="@+id/view"
            app:layout_constraintEnd_toEndOf="@+id/view"
            app:layout_constraintStart_toStartOf="@+id/view2" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_collapseMode="pin"
            android:layout_gravity="bottom">

            <TextView
                android:id="@+id/name_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/accid"
                android:textColor="@color/background_color_white"
                android:textSize="30sp"
                android:layout_marginBottom="10dp"
                app:layout_constraintBottom_toTopOf="@+id/view"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                tools:text="Album Name" />

            <View
                android:id="@+id/view"
                android:layout_width="65dp"
                android:layout_height="65dp"
                android:alpha="0.5"
                android:background="@drawable/corner_circle"
                android:backgroundTint="@color/gray_color"
                app:layout_constraintBottom_toBottomOf="@+id/listen_button"
                app:layout_constraintEnd_toEndOf="@+id/listen_button" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/listen_button"
                style="@style/Widget.Material3.Button.IconButton.Outlined"
                android:layout_width="65dp"
                android:layout_height="65dp"
                android:layout_marginStart="20dp"
                android:layout_marginBottom="40dp"
                android:paddingStart="10dp"
                app:icon="@drawable/ic_play"
                app:iconTint="@color/white"
                app:iconSize="36dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/download_button"
                app:strokeWidth="0dp"/>

            <View
                android:id="@+id/view2"
                android:layout_width="65dp"
                android:layout_height="65dp"
                android:alpha="0.5"
                android:background="@drawable/corner_circle"
                android:backgroundTint="@color/gray_color"
                app:layout_constraintBottom_toBottomOf="@+id/download_button"
                app:layout_constraintEnd_toEndOf="@+id/download_button" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/download_button"
                style="@style/Widget.Material3.Button.IconButton.Outlined"
                android:layout_width="65dp"
                android:layout_height="65dp"
                android:paddingStart="10dp"
                app:icon="@drawable/ic_download"
                app:iconTint="@color/white"
                app:iconSize="36dp"
                app:strokeWidth="0dp"
                app:layout_constraintBottom_toBottomOf="@+id/listen_button"
                app:layout_constraintEnd_toStartOf="@+id/listen_button"
                app:layout_constraintHorizontal_chainStyle="packed"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@+id/listen_button" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:fontFamily="@font/roboto_medium"
                android:text="@string/listen_text"
                android:textColor="@color/white"
                android:textSize="14sp"
                app:layout_constraintEnd_toEndOf="@+id/listen_button"
                app:layout_constraintStart_toStartOf="@+id/listen_button"
                app:layout_constraintTop_toBottomOf="@+id/listen_button" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:fontFamily="@font/roboto_medium"
                android:text="@string/download_text"
                android:textColor="@color/white"
                android:textSize="14sp"
                app:layout_constraintEnd_toEndOf="@+id/download_button"
                app:layout_constraintStart_toStartOf="@+id/download_button"
                app:layout_constraintTop_toBottomOf="@+id/download_button" />
        </androidx.constraintlayout.widget.ConstraintLayout>

        <com.google.android.material.appbar.MaterialToolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            app:layout_collapseMode="pin"
            android:layout_marginTop="30dp"
            app:menu="@menu/top_app_bar_settings_search"
            app:navigationIcon="@drawable/ic_arrow_back">

            <com.google.android.material.progressindicator.CircularProgressIndicator
                android:id="@+id/progress_indicator"
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:visibility="gone"
                android:indeterminate="true"/>

            <TextView
                android:id="@+id/progress_text_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/progress_text"
                android:visibility="gone"
                android:fontFamily="@font/roboto_medium"
                android:textSize="17sp"
                android:layout_marginStart="10dp"/>
        </com.google.android.material.appbar.MaterialToolbar>
    </com.google.android.material.appbar.CollapsingToolbarLayout>
</com.google.android.material.appbar.AppBarLayout>